Make it possible to print current page

BUG: 321280